@@ -105,6 +105,7 @@ testInternalPost ()
   CURL *c;
   char buf[2048];
   struct CBC cbc;
+  CURLcode errornum;
 
   cbc.buf = buf;
   cbc.size = 2048;
@@ -131,8 +132,11 @@ testInternalPost ()
   //   setting NOSIGNAL results in really weird
   //   crashes on my system!
   curl_easy_setopt (c, CURLOPT_NOSIGNAL, 1);
-  if (CURLE_OK != curl_easy_perform (c))
+  if (CURLE_OK != (errornum = curl_easy_perform (c)))
     {
+      fprintf(stderr, 
+	      "curl_easy_perform failed: `%s'\n",
+	      curl_easy_strerror(errornum));
       curl_easy_cleanup (c);
       MHD_stop_daemon (d);
       return 2;
@@ -161,6 +165,7 @@ testMultithreadedPost ()
   CURL *c;
   char buf[2048];
   struct CBC cbc;
+  CURLcode errornum;
 
   cbc.buf = buf;
   cbc.size = 2048;
@@ -187,8 +192,11 @@ testMultithreadedPost ()
   //   setting NOSIGNAL results in really weird
   //   crashes on my system!
   curl_easy_setopt (c, CURLOPT_NOSIGNAL, 1);
-  if (CURLE_OK != curl_easy_perform (c))
+  if (CURLE_OK != (errornum = curl_easy_perform (c)))
     {
+      fprintf(stderr, 
+	      "curl_easy_perform failed: `%s'\n",
+	      curl_easy_strerror(errornum));
       curl_easy_cleanup (c);
       MHD_stop_daemon (d);
       return 32;
