@@ -117,6 +117,7 @@ testInternalPut ()
   struct CBC cbc;
   unsigned int pos = 0;
   int done_flag = 0;
+  CURLcode errornum;
 
   cbc.buf = buf;
   cbc.size = 2048;
@@ -145,8 +146,11 @@ testInternalPut ()
   //   setting NOSIGNAL results in really weird
   //   crashes on my system!
   curl_easy_setopt (c, CURLOPT_NOSIGNAL, 1);
-  if (CURLE_OK != curl_easy_perform (c))
+  if (CURLE_OK != (errornum = curl_easy_perform (c)))
     {
+      fprintf(stderr, 
+	      "curl_easy_perform failed: `%s'\n",
+	      curl_easy_strerror(errornum));
       curl_easy_cleanup (c);
       MHD_stop_daemon (d);
       return 2;
@@ -177,6 +181,7 @@ testMultithreadedPut ()
   struct CBC cbc;
   unsigned int pos = 0;
   int done_flag = 0;
+  CURLcode errornum;
 
   cbc.buf = buf;
   cbc.size = 2048;
@@ -205,8 +210,11 @@ testMultithreadedPut ()
   //   setting NOSIGNAL results in really weird
   //   crashes on my system!
   curl_easy_setopt (c, CURLOPT_NOSIGNAL, 1);
-  if (CURLE_OK != curl_easy_perform (c))
+  if (CURLE_OK != (errornum = curl_easy_perform (c)))
     {
+      fprintf(stderr, 
+	      "curl_easy_perform failed: `%s'\n",
+	      curl_easy_strerror(errornum));
       curl_easy_cleanup (c);
       MHD_stop_daemon (d);
       return 32;
